# neko-cli

./: .gitignore  README.md  pyproject.toml
neko_cli/: __init__.py  config.py  main.py
neko_cli/commands/: init.py  install.py  list_cmd.py  remove.py  search.py  update.py
neko_cli/sources/: __init__.py  base.py  npm_source.py  pypi_source.py  repo_source.py  uv_source.py
npm-package/: package.json
